@@ -19,6 +19,11 @@ NEWS:
 NEW: [features/enhancements]
 +New version of Launch v1.10 (now supports all filetypes)
 
+LIBRARY:
++SegmentBar supports being shown in a vertical orientation
++SegmentBook adds styles SEGBOOK_STYLE_LEFT, SEGBOOK_STYLE_RIGHT, SEGBOOK_STYLE_BOTTOM
++SegmentBar and SegmentBook, show tool tips when labels are hidden.
+
 BUG FIXES:
 +Fix incorrect detection of UTF-32 BOM as UTF-16 BOM.
 +Fix bug in restoring bookmarks after a file reload.
